[package]
name = "mdlc"
version = "0.3.0"
authors = ["Chris Davison <c.jr.davison@gmail.com>"]
edition = "2018"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.3.1"
glob = "0.3"
reqwest = { version = "0.10", features=["blocking"]}
