[package]
name = "mdlc"
version = "0.8.1"
authors = ["Chris Davison <c.jr.davison@gmail.com>"]
edition = "2018"
license = "GPL-3.0-only"
description = "Markdown Link Checker. Find broken web and local links."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "~1.4"
regex = "~1.3"
glob = "0.3"
reqwest = { version = "~0.11.23", default-features = false, features = ["blocking", "json", "rustls-tls"] }
structopt="~0.3"
anyhow = "~1.0"
rayon = "~1.5"

[lib]
name="mdlc"
path="src/lib.rs"

[[bin]]
name="mdlc"
path="bin/main.rs"
